--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,21 +18,15 @@ services:
     environment:
       # https://www.metabase.com/docs/latest/operations-guide/environment-variables.html
       MB_DB_FILE: /metabase-data/metabase.db
-      MB_ADMIN_EMAIL: admin@fabrique.social.gouv.fr
+      MB_ADMIN_EMAIL: admin@pouet.fr
       MB_ANON_TRACKING_ENABLED: "false"
-      MB_APPLICATION_LOGO_URL: https://socialgouv.github.io/support/_media/marianne.jpeg
+      MB_APPLICATION_LOGO_URL: logo.jpeg
       MB_APPLICATION_NAME: metabase-test
-      MB_EMAIL_FROM_ADDRESS: admin@fabrique.social.gouv.fr
+      MB_EMAIL_FROM_ADDRESS: admin@pouet.fr
       MB_ENABLE_EMBEDDING: "true"
       MB_ENABLE_PUBLIC_SHARING: "true"
       MB_ENCRYPTION_SECRET_KEY: UkYerMHBcbwnoGpSJ0sj
       MB_SITE_LOCALE: fr
-      MB_SITE_NAME: Fabrique des ministères sociaux
-      # - MB_DB_TYPE: postgres
-      # - MB_DB_DBNAME: metabase
-      # - MB_DB_PORT: 5432
-      # - MB_DB_USER: metabase
-      # - MB_DB_PASS: password
-      # - MB_DB_HOST: db
+      MB_SITE_NAME: Super dashboard
     ports:
       - 3030:3000
